# django-app

./: .env  .env.template  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
mysite/mysite/: settings.py
mysite/shopapp/: urls.py  views.py
mysite/shopapp/templates/shopapp/: user_orders_list.html
