[tool.poetry]
name = "django-app"
version = "0.1.0"
description = ""
authors = ["artem <andtorg55@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "4.2.0"
django-rest-framework = "^0.1.0"
djangorestframework = "^3.15.2"
django-filter = "^24.3"
django-debug-toolbar = "^4.4.6"
pillow = "^11.0.0"
gunicorn = "^23.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 
